# Generic_gierka

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Config/: graphics.ini  window.ini  window_settings.ini
Resources/Tilemap/: colliders.txt  tiles.txt
src/: Animate.cpp  Animate.h  AnimationComponent.cpp  AnimationComponent.h  AnimationComponents.cpp  AnimationComponents.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  GameState.cpp  GameState.h  Graphics.cpp  Graphics.h  GraphicsSettings.cpp  GraphicsSettings.h  Gui.cpp  Gui.h  HitBox.cpp  HitBox.h  HitboxComponent.cpp  HitboxComponent.h  MainMenu.cpp  MainMenu.h  MainMenuState.cpp  MainMenuState.h  Movement.cpp  Movement.h  MovementComponent.cpp  MovementComponent.h  Pause.cpp  Pause.h  PauseMenu.cpp  PauseMenu.h  Player.cpp  Player.h  Settings.cpp  Settings.h  (+13 more)
